--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
+    "node-cache": "^5.1.2",
     "node-cron": "^3.0.2",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6"
   }
 }
